--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ caption {
 }
 
 body {
-    background-image: url(../pvy-stuchlik/img/oko.jpg)
+    background-image: url(img/oko.jpg)
 }
 
 .font-size {
